--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
+DB_URI=mongodb+srv://banpeilim:banpei8926@nodeexpressprojects.zfsqeek.mongodb.net/SAMUNG_KIOSK?retryWrites=true&w=majority
 PORT=5000
